--- a/gui/frontend/index.html
+++ b/gui/frontend/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <div id="app">
+        <!-- Loading overlay -->
+        <div id="loading-overlay">
+            <div class="loading-content">
+                <div class="spinner"></div>
+                <span>Loading photo metadata...</span>
+            </div>
+        </div>
+        
         <form id="upload-form">
             <div id="preview-container" class="hidden">
                 <img id="preview" src="" alt="Preview">
