Add thumbnail preview to single-image GUI form
- Extended SQLite cache with thumbnails table for caching
- Added thumbnail generation package with base64 encoding
- Updated PhotoMetadata to include image dimensions and file size
- Enhanced GUI to show thumbnail, filename, and dimensions
- Thumbnail generation happens on image selection for instant preview
- Cached thumbnails are reused for previously uploaded images

--- a/gui/frontend/index.html
+++ b/gui/frontend/index.html
@@ -17,7 +17,13 @@
         
         <form id="upload-form">
             <div id="preview-container" class="hidden">
-                <img id="preview" src="" alt="Preview">
+                <div class="preview-content">
+                    <img id="preview" src="" alt="Preview">
+                    <div class="preview-info">
+                        <div id="filename" class="filename"></div>
+                        <div id="dimensions" class="dimensions"></div>
+                    </div>
+                </div>
             </div>
             
             <div class="field">
