fix: remove mandatory alt text requirement from GUI
- Remove required attribute from alt text field in HTML
- Remove JavaScript validation that blocked uploads without alt text
- Alt text remains available but optional - makes more sense for photo sharing
- Flickr and SmugMug don't require alt text for photos

--- a/gui/frontend/index.html
+++ b/gui/frontend/index.html
@@ -49,8 +49,8 @@
                         </div>
                         
                         <div class="field">
-                            <label for="alt">Alt Text <span class="required">*</span></label>
-                            <textarea id="alt" name="alt" rows="2" placeholder="Alt text for accessibility" required></textarea>
+                            <label for="alt">Alt Text</label>
+                            <textarea id="alt" name="alt" rows="2" placeholder="Alt text for accessibility"></textarea>
                         </div>
                         
                         <div class="field">
